# python-template

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main-ci.yml
examplecode/: helloword.py
examplecode/tests/: test_helloword.py
mymodule/tests/: test_helloword.py
scripts/: helloworld.py
template_package/tests/: test_helloword.py
